Fix vulnerability related to Pillow < v10.0.1
The vulnerability was flagged by Dependabot.
This commit implements the The suggested fix, namely upgrade Pillow to version >=10.0.1.

Problems fixed:

- libwebp: OOB write in BuildHuffmanTable #2
- Bundled libwebp in Pillow vulnerable #3

--- a/requirements.txt
+++ b/requirements.txt
@@ -28,16 +28,21 @@ fs==2.4.16
 greenlet==2.0.2
 idna==3.4
 inflection==0.5.1
+iniconfig==2.0.0
 isodate==0.6.1
 leather==0.3.4
 multidict==6.0.4
+numpy==1.25.0
 olefile==0.46
 openai==0.27.8
 openpyxl==3.1.2
 packaging==23.1
 parsedatetime==2.6
 Pillow==10.0.0
+pluggy==1.0.0
+protobuf==4.21.12
 py-moneyed==3.0
+pytest==7.3.2
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-slugify==8.0.1
